--- a/src/main/webapp/userDisplayStyleSheet.css
+++ b/src/main/webapp/userDisplayStyleSheet.css
@@ -13,3 +13,16 @@ table, th, td {
 #enterName {
     font-size: 2.5em;
 }
+
+
+.button {
+    display: inline;
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
