--- a/src/main/webapp/styleSheets/userDisplayStyleSheet.css
+++ b/src/main/webapp/styleSheets/userDisplayStyleSheet.css
@@ -3,10 +3,58 @@
     author: Matthew Hill
  */
 
+body {
+    background-image: url("../images/hairTools_2.jpeg");
+    background-size: cover;
+    background-color: #000000;
+    background-repeat: no-repeat;
+}
+
+.body {
+    background-color: rgba(0, 0, 0, 0.65);
+}
+
+.jumbotron-fluid {
+    color: #ffffff;
+    text-shadow: 3px 3px 5px black;
+    background-color: rgba(0, 0, 0, 0.65);
+}
+
+.jumbotron {
+    margin-bottom: 0;
+}
+
+.contentHeading {
+    color: #ffffff;
+    text-shadow: 3px 3px 5px black;
+    text-align: center;
+}
+
+.mainTitle {
+    font-size: 4em;
+    font-weight: bold;
+    font-family: "Lucida Grande";
+    text-shadow: 3px 3px 5px black;
+}
+
+.subTitle {
+    font-weight: bold;
+    font-family: "Lucida Calligraphy";
+    text-shadow: 3px 3px 5px black;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 table, th, td {
     border: 1px solid black;
     background-color: white;
+    color: black;
+    opacity: 85%;
     border-collapse: collapse;
+    position: center;
     padding: 1em;
 }
 
@@ -14,15 +62,43 @@ table, th, td {
     font-size: 2.5em;
 }
 
+.buttonChoices {
+    display: block;
+    position: center;
+    background-color: white;
+    opacity: 75%;
+    padding: 5em;
+}
 
 .button {
     display: inline;
-    width: 115px;
-    height: 25px;
-    background: #4E9CAF;
-    padding: 10px;
+    margin-left: 9em;
+    margin-right: auto;
+    width: 6em;
+    height: 4em;
+    background: #000000;
+    padding: 2em;
+    position: center;
     text-align: center;
     border-radius: 5px;
     color: white;
     font-weight: bold;
+    font-size: 2em;
+}
+
+#feelFabulous {
+    font-size: 3em;
+    position: center;
+    text-align: center;
+    font-family: "Lucida Grande";
+    color: black;
+    text-shadow: 3px 3px 5px white;
+    padding-bottom: 3em;
+}
+
+.footer {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.65);
+    margin-bottom: 0;
+    width: 100%;
 }
