--- a/src/main/webapp/styleSheets/userDisplayStyleSheet.css
+++ b/src/main/webapp/styleSheets/userDisplayStyleSheet.css
@@ -96,9 +96,16 @@ table, th, td {
     padding-bottom: 3em;
 }
 
+.cursive {
+    font-family: "Lucida Calligraphy";
+}
+
 .footer {
-    display: block;
     background-color: rgba(0, 0, 0, 0.65);
+    left: 0;
+    bottom: 0;
     margin-bottom: 0;
     width: 100%;
+    height: 100px;
+    display: block;
 }
