--- a/src/main/webapp/styleSheets/userDisplayStyleSheet.css
+++ b/src/main/webapp/styleSheets/userDisplayStyleSheet.css
@@ -100,6 +100,16 @@ table, th, td {
     font-family: "Lucida Calligraphy";
 }
 
+.signUpForm {
+    color: white;
+    display: table;
+    background-color: rgba(0, 0, 0, 0.90);
+    position: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 3em;
+}
+
 .footer {
     background-color: rgba(0, 0, 0, 0.65);
     left: 0;
@@ -107,5 +117,5 @@ table, th, td {
     margin-bottom: 0;
     width: 100%;
     height: 100px;
-    display: block;
+    display: inline-block;
 }
